[package]
name = "auraxis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive", "serde_derive"] }
serde_json = "1.0.85"
serde_with = { version = "2.0.0", features = ["chrono"] }
tracing = "0.1.36"
tokio = { version = "1.21.0", features = ["sync", "time", "rt", "net", "macros"] }
tokio-tungstenite = { version = "0.17.2", features = ["connect", "native-tls"] }
futures = "0.3.24"
futures-util = "0.3.24"
thiserror = "1.0.34"
num_enum = "0.5.7"
anyhow = "1.0.64"
reqwest = { version = "0.11.12", features = ["json"] }
async-trait = "0.1.58"
auraxis_macros = {version = "0.1.0", path = "../auraxis_macros"}

[dev-dependencies]
tracing-subscriber = "0.3"

[lib]
name = "auraxis"
path = "src/lib.rs"

[[example]]
name = "realtime"

[[example]]
name = "api"
