[package]
name = "auraxis"
description = "API & ESS client for Planetside 2 Census API"
license = "MIT"
version = "0.3.0"
edition = "2024"
authors = ["AnotherGenZ"]
repository = "https://github.com/AnotherGenZ/auraxis-rs"
documentation = "https://docs.rs/auraxis"
readme = "README.md"
keywords = ["census", "planetside"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive", "serde_derive"] }
serde_json = "1.0.85"
serde_with = { version = "3.18.0", features = ["chrono"] }
tracing = "0.1.36"
tokio = { version = "1.21.0", features = [
    "sync",
    "time",
    "rt",
    "net",
    "macros",
] }
tokio-tungstenite = { version = "0.29.0", features = [
    "connect",
    "native-tls-vendored",
] }
futures = "0.3.24"
futures-util = "0.3.24"
thiserror = "2.0.18"
num_enum = "0.7.6"
anyhow = "1.0.64"
reqwest = { version = "0.13.2", features = ["json", "query"], optional = true }
async-trait = "0.1.58"
auraxis_macros = { version = "0.1.0", path = "../auraxis_macros", optional = true }
metrics = "0.24.3"
stream-reconnect = "0.3.4"
strum = { version = "0.28.0", features = ["derive"], optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
api = ["dep:auraxis_macros", "dep:reqwest"]
strum = ["dep:strum"]

[lib]
name = "auraxis"
path = "src/lib.rs"

[[example]]
name = "realtime"

[[example]]
name = "api"
required-features = ["api"]
